<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">
    <View
        android:id="@+id/viewHeaderbackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/record"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTitle"
        app:tint="@color/white"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderbackground"
        app:layout_constraintTop_toBottomOf="@id/viewHeaderbackground">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp">
            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shot_views"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="move"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/primary"
                android:textSize="@dimen/_12ssp"/>
            <LinearLayout
                android:id="@+id/layutClients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layutImpacted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/pic1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/clients"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="395"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layutImpacted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/layutFollowing"
                app:layout_constraintStart_toEndOf="@id/layutClients"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/pic2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/impacted"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_147"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layutFollowing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layutImpacted"
                app:layout_constraintTop_toBottomOf="@id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:src="@drawable/pic3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/following"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_820"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_16ssp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_16sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/dashboard_item_1"/>
            <include layout="@layout/dashboard_item_2"/>
            <include layout="@layout/dashboard_item_3"/>
            <include layout="@layout/dashboard_item_4"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>